syntax = "proto3";

option csharp_namespace = "ElasticSearch_gRPC_Service";

package documentHelp;

service DocumentHelper {
  rpc UploadFileToElastic (UploadFileRequest) returns (UploadFileReply);
  rpc FindFileInElastic (FileSearchRequest) returns (FileSearchReply);
}

message UploadFileRequest {
  string base64Data = 1;
}

message UploadFileReply {
  bool result = 1;
}

message FileSearchRequest {
	string query = 1;
}

message FileSearchReply {
	string jsonData = 1;
}
